Update 'ijafnvwsh-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a5faed8d25.brch.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:fd00fef5ae9f90b5d424ea8ab915682a599b64f3@sha256:03c6233f6ca4a0e234526e4ec1df3174f093ab73f6c50bb0efcd40ed72752f08

--- a/components/ijafnvwsh-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/ijafnvwsh-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ijafnvwsh-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a5faed8d25.brch.p3.openshiftapps.com/rhtap/rhtap-qe-dotnet-basic:fd00fef5ae9f90b5d424ea8ab915682a599b64f3@sha256:03c6233f6ca4a0e234526e4ec1df3174f093ab73f6c50bb0efcd40ed72752f08
+          name: container-image
